// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quarkus-project parseProjectInQuery correctly with github: github 1`] = `
Object {
  "extensions": Array [
    Object {
      "category": "Core",
      "default": false,
      "description": "Build time CDI dependency injection",
      "id": "io.quarkus:quarkus-arc",
      "keywords": Array [
        "arc",
        "cdi",
        "dependency-injection",
        "di",
        "label",
      ],
      "name": "ArC",
      "order": 0,
      "shortName": "CDI",
      "tags": Array [],
      "version": "test-version",
    },
    Object {
      "category": "Integration",
      "default": false,
      "description": "Camel support for Netty",
      "id": "io.quarkus:quarkus-camel-netty4-http",
      "keywords": Array [
        "camel-netty4-http",
        "camel",
      ],
      "name": "Camel Netty4 test HTTP",
      "order": 2,
      "tags": Array [
        "preview",
      ],
      "version": "test-version",
    },
    Object {
      "category": "Cloud",
      "default": false,
      "description": "Some description",
      "id": "some-id",
      "keywords": Array [
        "lambda",
        "amazon-lambda",
        "aws-lambda",
        "amazon",
        "aws",
        "label",
      ],
      "name": "A CDI in name test",
      "order": 1,
      "shortName": "a shortname",
      "tags": Array [
        "experimental",
      ],
      "version": "test-version",
    },
  ],
  "github": Object {
    "code": "totototo",
    "state": "djdjdj",
  },
  "metadata": Object {
    "artifactId": "code-test",
    "buildTool": "GRADLE",
    "groupId": "org.test",
    "noCode": false,
    "version": "1.0.0-SNAPSHOT",
  },
}
`;

exports[`quarkus-project parseProjectInQuery correctly: no-github 1`] = `
Object {
  "extensions": Array [
    Object {
      "category": "Core",
      "default": false,
      "description": "Build time CDI dependency injection",
      "id": "io.quarkus:quarkus-arc",
      "keywords": Array [
        "arc",
        "cdi",
        "dependency-injection",
        "di",
        "label",
      ],
      "name": "ArC",
      "order": 0,
      "shortName": "CDI",
      "tags": Array [],
      "version": "test-version",
    },
    Object {
      "category": "Integration",
      "default": false,
      "description": "Camel support for Netty",
      "id": "io.quarkus:quarkus-camel-netty4-http",
      "keywords": Array [
        "camel-netty4-http",
        "camel",
      ],
      "name": "Camel Netty4 test HTTP",
      "order": 2,
      "tags": Array [
        "preview",
      ],
      "version": "test-version",
    },
    Object {
      "category": "Cloud",
      "default": false,
      "description": "Some description",
      "id": "some-id",
      "keywords": Array [
        "lambda",
        "amazon-lambda",
        "aws-lambda",
        "amazon",
        "aws",
        "label",
      ],
      "name": "A CDI in name test",
      "order": 1,
      "shortName": "a shortname",
      "tags": Array [
        "experimental",
      ],
      "version": "test-version",
    },
  ],
  "github": undefined,
  "metadata": Object {
    "artifactId": "code-test",
    "buildTool": "MAVEN",
    "groupId": "org.test",
    "noCode": false,
    "version": "1.0.0-SNAPSHOT",
  },
}
`;

exports[`quarkus-project parseProjectInQuery with some other metadata: v=1.0 1`] = `
Object {
  "extensions": Array [],
  "github": undefined,
  "metadata": Object {
    "artifactId": "code-with-quarkus",
    "buildTool": "MAVEN",
    "groupId": "org.acme",
    "noCode": false,
    "version": "1.0",
  },
}
`;
